--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,33 @@ body {
     margin: 0 auto;
 }
 
+.section-title {
+    color: #131318;
+    font-size: 2.5rem;
+    font-weight: 800;
+}
+
+.section-p {
+    color: rgba(19, 19, 24, 0.70);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.btn-primary {
+    width: 174px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    text-align: center;
+    font-size: 1.1rem;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    color: white;
+    border: none;
+}
+
 /*======Header start from here=====*/
 
 /*======Nav section start from here=====*/
@@ -107,14 +134,15 @@ li.link-last {
 /*======Hero section start from here====*/
 .hero {
     text-align: center;
-    background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%),url('../Images/bridge.png');
+    background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url('../Images/bridge.png');
 
     ;
     padding: 106px 0;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius:  16px;;
+    border-radius: 16px;
+    ;
 }
 
 .hero .content h1 {
@@ -138,15 +166,43 @@ li.link-last {
 
 .hero form input {
     width: 174px;
+    height: 52px;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    background: #FFF;
+
+}
+
+.hero form input:placeholder-shown {
+    color: rgba(19, 19, 24, 0.50);
+    text-align: center;
+    font-size: 0.8rem;
 
 }
 
 .hero form select {
     width: 147px;
+    height: 52px;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    color: rgba(19, 19, 24, 0.50);
+    font-size: 0.8rem;
+    text-align: center;
 }
 
 .hero form button {
     width: 174px;
+    height: 52px;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    background: #FF5400;
+    text-align: center;
+    font-size: 0.8rem;
+    color: #fff;
+
 }
 
 .hero form {
@@ -156,4 +212,121 @@ li.link-last {
     gap: 24px;
     border-radius: 8px;
     background: rgba(255, 255, 255, 0.30);
+}
+
+/*=======Popular section start from here========*/
+.popular-container {
+    display: flex;
+    align-items: center;
+}
+
+.popular-section {
+    margin: 80px 0;
+}
+
+.popular-content p {
+    margin: 16px 0;
+}
+
+.popular-img img {
+    width: 100%;
+}
+
+/*======Destination section start from here=====*/
+.destination-img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 16px;
+}
+
+.destination-img-container {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(3, fr);
+    gap: 20px;
+    margin: 0 auto;
+}
+
+.destinaion-img-1 {
+    grid-column: 1/span 6;
+    position: relative;
+}
+.place-name-1{
+    position: absolute;
+    top: 50%;
+    left: 40%;
+}
+.place-name h4 {
+    color: #FFF;
+    font-size: 1.2rem;
+    font-weight: 800;
+}
+
+.destinaion-img-2 {
+    grid-column: 7/span 6;
+    position: relative;
+}
+.place-name-2{
+    position: absolute;
+    top: 50%;
+    left: 40%;
+}
+
+.destinaion-img-3 {
+    grid-column: 1/span 4;
+    position: relative;
+}
+.place-name-3{
+    position: absolute;
+    top: 50%;
+    left: 40%;
+}
+
+.destinaion-img-4 {
+    grid-column: 5/span 5;
+    position: relative;
+}
+.place-name-4{
+    position: absolute;
+    top: 50%;
+    left: 30%;
+}
+
+.destinaion-img-5 {
+    grid-column: 10/span 3;
+    position: relative;
+}
+.place-name-5{
+    position: absolute;
+    top: 50%;
+    left: 30%;
+}
+
+.destinaion-img-6 {
+    grid-column: 1/span 6;
+    position: relative;
+}
+.place-name-6{
+    position: absolute;
+    top: 50%;
+    left: 40%;
+}
+
+.destinaion-img-7 {
+    grid-column: 7/span 6;
+    position: relative;
+}
+.place-name-7{
+    position: absolute;
+    top: 50%;
+    left: 40%;
+}
+
+.destination-content {
+    text-align: center;
+}
+
+.destination-content p {
+    margin: 40px 0;
 }
