--- a/styles/style.css
+++ b/styles/style.css
@@ -52,14 +52,13 @@ body {
 }
 
 .btn-primary {
-    width: 174px;
-    height: 52px;
+    padding: 14px 25px;
     border-radius: 8px;
     background: #FF5400;
     text-align: center;
     font-size: 1.1rem;
     font-style: normal;
-    font-weight: 800;
+    font-weight: 700;
     line-height: normal;
     color: white;
     border: none;
@@ -482,4 +481,27 @@ li.link-last {
 }
 .deal-section{
     margin-bottom: 80px;
+}
+.deal-btn{
+    margin: 0 auto;
+}
+.deal-container  h3{
+    margin-bottom: 20px;
+}
+
+/*=====Demo container start from here=====*/
+.demo-container{
+    display: flex;
+    align-items: center;
+}
+.demo-container p{
+    margin: 20px 0;
+}
+.demo-container iframe{
+    border-radius: 16px;
+    width: 560px;
+}
+
+.demo-section{
+    margin: 80px 0;
 }
