--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -167,10 +167,25 @@
     /*======demo container======*/
     .demo-container{
         flex-direction: column;
+       
     }
     .demo-container iframe{
        
         width: auto;
+    }
+
+    /*====news letter section====*/
+    .news-letter-container {
+        flex-direction: column;
+    }
+    .news-letter-container form button{
+        padding: 16px 220px 16px 15px;
+    }
+    .news-letter-container form input{
+        padding: 16px 105px 16px 15px;
+    } 
+    .news-letter-container form{
+        margin: 20px 0;
     }
 
 }
@@ -316,5 +331,18 @@
     .demo-container iframe{
        
         width: 450px;
+    }
+    /*====news letter section====*/
+    .news-letter-container {
+        flex-direction: column;
+    }
+    .news-letter-container form button{
+        padding: 16px 220px 16px 15px;
+    }
+    .news-letter-container form input{
+        padding: 16px 105px 16px 15px;
+    } 
+    .news-letter-container form{
+        margin: 20px 0;
     }
     }
