some minor bugs fixed

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -173,8 +173,9 @@
        
     }
     .demo-container iframe{
-       
-        width: auto;
+        
+        max-width: 450px;
+        margin: 20px 0 auto;
     }
 
     /*====news letter section====*/
