--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -174,8 +174,8 @@
     }
     .demo-container iframe{
         
-        max-width: 400px;
-        margin: 20px 0 auto 0;
+        width: auto;
+        margin: 20px 0;
     }
 
     /*====news letter section====*/
